2014-03-27  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Can change
	order in varbinds.

2014-03-20  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf.new,
	conf/pandora_server.conf.windows: Restart on mysql connection
	failure enabled by default.

2014-03-20  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Move WMI query safe_output 
	function to before the quotes ssubstitution to fix
	any WMI component with double quotes and WMI Wizard

2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_db.pl: fixed the notinit_count in the agents after
	the delete not init modules.

2014-03-13  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Do not compact proc modules.

2014-03-13  Mario Pulido <mario.pulido@artica.es>

	* pandora_server.redhat.spec: Added netflow directory

2014-03-13  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm
	  util/pandora_dbstress.pl: Fixed bug executing
	pandora_dbstress.

2014-03-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Add action recovery fields to the
	recovery logic in alerts.
	Ticket #501

2014-01-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Updated copyright information.

2013-01-22 Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: Fixed that pandora_manage.pl had failed to write
	logs using with pandora_log().

2014-01-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* DEBIAN/make_deb_package.sh: added the patch made by
	Carlos Cesario, thanks.
	
	Fixes: #2410

2014-01-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Allow intervals to infinity when configuring
	  alert actions.

2014-01-15  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Prevent the thread that executes periodic tasks
	  from dying on database errors.

2014-01-14  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Added address check