@@ -1,3 +1,8 @@
+2014-03-31  Vanessa Gil <vanessa.gil@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Execute more
+	actions to snmp alerts.
+
 2014-03-27  Vanessa Gil <vanessa.gil@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Can change
